[project]
name = "jax-streamplot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ruff>=0.11.13",
]
